make it mobile responsive

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | BlogMate Library</title>
 </head>
 
@@ -24,7 +25,8 @@
 
 <p>
     BlogMate Library is a personal digital collection created to store and share
-    research papers, project documentation, and books related to technology and innovation that I find interesting and my own projects that I am working on.
+    research papers, project documentation, and books related to technology and
+    innovation that I find interesting and my own projects that I am working on.
 </p>
 
 <h2>Purpose</h2>
