--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogMate Library</title>
 </head>
 
@@ -17,27 +18,29 @@
     <a href="about.html">About</a>
 </center>
 
-<!-- tabels-->
-
 <hr>
 
-<h2>Project paper</h2>
+<h2>Project Paper</h2>
 
+<!-- Table stays the same, mobile browsers will scroll it horizontally if needed -->
 <table border="1" cellpadding="10" cellspacing="0" width="100%">
-<tr>
-    <th align="left">Project Name</th>
-    <th align="left">IOT Technology</th>
-    <th align="left">Paper</th>
-</tr>
-<tr>
-    <td>Smart Home system</td>
-    <td>IOT</td>
-    <td>
-        <a href="projects/Smart Energy monitoring and wastage detection system.pdf" target="_blank">view pdf</a>
-    </td>
-</tr>
+    <tr>
+        <th align="left">Project Name</th>
+        <th align="left">IOT Technology</th>
+        <th align="left">Paper</th>
+    </tr>
+    <tr>
+        <td>Smart Home system</td>
+        <td>IOT</td>
+        <td>
+            <a href="projects/Smart Energy monitoring and wastage detection system.pdf" target="_blank">
+                View PDF
+            </a>
+        </td>
+    </tr>
 </table>
 
+<br>
 
 <center>
     <p>© 2025 BlogMate Library | Hosted on GitHub Pages</p>
