--- a/about.html
+++ b/about.html
@@ -24,22 +24,27 @@
 <h2>About This Library</h2>
 
 <p>
-    BlogMate Library is a personal digital collection created to store and share
-    research papers, project documentation, and books related to technology and
-    innovation that I find interesting and my own projects that I am working on.
+    Blogmate library is a personal digital collection created to store and share
+    research papers, project documentation and books.<br>
+    This website is a part of the Blogmate project ecosystem.
 </p>
 
 <h2>Purpose</h2>
 
 <p>
-    This website is designed for personal academic and research use.
-    All documents are uploaded manually and hosted using GitHub Pages.
+    Blogmate Library is a personal digital collection created to store and share
+    research papers, project documentation, and books related to my interesting
+    and my own project that I am working on. The Purpose of this library is to
+    provide a convenient and easy-to access platform for users to access and
+    access my digital contents. It is a place where I can share my knowledge and 
+    experiences with others. It is like open source library for my research and 
+    projects.
 </p>
 
 <h2>Maintained By</h2>
 
 <p>
-    <b>Ayush Rauniyar</b><br><br>
+    <b>Blogmate project ecosystem</b><br><br>
     Find more about me on my BlogMate page:<br>
     <a href="https://zroxcoder.github.io/blog/" target="_blank">
         https://zroxcoder.github.io/blog/
