--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br>
 
 <center>
-    <p>© 2025 BlogMate Library | Hosted on GitHub Pages</p>
+    <p>© 2025 BlogMate Library</p>
 </center>
 
 </body>
