--- a/index.html
+++ b/index.html
@@ -4,47 +4,275 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogMate Library</title>
+
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .header {
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .nav {
+            text-align: center;
+            margin: 15px 0;
+        }
+
+        .nav a {
+            text-decoration: none;
+            color: #0077cc;
+            margin: 0 10px;
+            font-weight: bold;
+        }
+
+        .controls {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin: 20px 0;
+        }
+
+        .controls input,
+        .controls select {
+            padding: 10px;
+            font-size: 15px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            flex: 1;
+            min-width: 200px;
+        }
+
+        .table-wrapper {
+            overflow-x: auto;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            min-width: 700px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+        }
+
+        th {
+            background-color: #f0f2f5;
+        }
+
+        tr:nth-child(even) {
+            background-color: #fafafa;
+        }
+
+        /* Pagination */
+        .pagination {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .pagination button {
+            padding: 6px 12px;
+            margin: 3px;
+            border: 1px solid #ccc;
+            background: #fff;
+            cursor: pointer;
+        }
+
+        .pagination button.active {
+            background: #0077cc;
+            color: white;
+            border-color: #0077cc;
+        }
+
+        .pagination button:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 14px;
+            color: #666;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+        }
+    </style>
 </head>
 
 <body>
 
-<center>
-    <h1>BlogMate Library</h1>
-    <p><b>Research Papers | Project Papers | Books</b></p>
-</center>
+<div class="container">
 
-<center>
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a>
-</center>
+    <div class="header">
+        <h1>BlogMate Library</h1>
+        <p><strong>Research Papers | Project Papers | Books</strong></p>
+    </div>
 
-<hr>
+    <div class="nav">
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a>
+    </div>
 
-<h2>Project Paper</h2>
+    <hr>
 
-<!-- Table stays the same, mobile browsers will scroll it horizontally if needed -->
-<table border="1" cellpadding="10" cellspacing="0" width="100%">
-    <tr>
-        <th align="left">Project Name</th>
-        <th align="left">IOT Technology</th>
-        <th align="left">Paper</th>
-    </tr>
-    <tr>
-        <td>Smart Home system</td>
-        <td>IOT</td>
-        <td>
-            <a href="projects/Smart Energy monitoring and wastage detection system.pdf" target="_blank">
-                View PDF
-            </a>
-        </td>
-    </tr>
-</table>
+    <!-- Search & Filter -->
+    <div class="controls">
+        <input type="text" id="searchInput" placeholder="Search title or technology...">
+        <select id="categoryFilter">
+            <option value="all">All Categories</option>
+            <option value="project">Project Papers</option>
+            <option value="research">Research Papers</option>
+            <option value="book">Books</option>
+        </select>
+    </div>
 
-<br>
+    <div class="table-wrapper">
+        <table id="libraryTable">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Category</th>
+                    <th>Technology</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr data-category="project">
+                    <td>Smart Home System</td>
+                    <td>Project</td>
+                    <td>IOT</td>
+                    <td><a href="#" target="_blank">View PDF</a></td>
+                </tr>
 
-<center>
-    <p>© 2025 BlogMate Library</p>
-</center>
+                <tr data-category="research">
+                    <td>Energy Optimization in IOT</td>
+                    <td>Research</td>
+                    <td>IOT</td>
+                    <td><a href="#" target="_blank">View PDF</a></td>
+                </tr>
+
+                <tr data-category="book">
+                    <td>Introduction to Embedded Systems</td>
+                    <td>Book</td>
+                    <td>Embedded</td>
+                    <td><a href="#" target="_blank">View Book</a></td>
+                </tr>
+
+                <!-- Add more rows freely -->
+            </tbody>
+        </table>
+    </div>
+
+    <div class="pagination" id="pagination"></div>
+
+    <div class="footer">
+        © 2025 BlogMate Library
+    </div>
+
+</div>
+
+<script>
+    const rowsPerPage = 5; // 🔧 Change this to 10 or 15 anytime
+    let currentPage = 1;
+
+    const searchInput = document.getElementById("searchInput");
+    const categoryFilter = document.getElementById("categoryFilter");
+    const tableBody = document.querySelector("#libraryTable tbody");
+    const pagination = document.getElementById("pagination");
+
+    function getFilteredRows() {
+        const searchText = searchInput.value.toLowerCase();
+        const category = categoryFilter.value;
+
+        return Array.from(tableBody.rows).filter(row => {
+            const text = row.innerText.toLowerCase();
+            const rowCategory = row.dataset.category;
+
+            return (
+                text.includes(searchText) &&
+                (category === "all" || rowCategory === category)
+            );
+        });
+    }
+
+    function renderTable() {
+        const filteredRows = getFilteredRows();
+        const totalPages = Math.ceil(filteredRows.length / rowsPerPage);
+
+        tableBody.querySelectorAll("tr").forEach(row => row.style.display = "none");
+
+        const start = (currentPage - 1) * rowsPerPage;
+        const end = start + rowsPerPage;
+
+        filteredRows.slice(start, end).forEach(row => {
+            row.style.display = "";
+        });
+
+        renderPagination(totalPages);
+    }
+
+    function renderPagination(totalPages) {
+        pagination.innerHTML = "";
+
+        const prevBtn = document.createElement("button");
+        prevBtn.textContent = "Prev";
+        prevBtn.disabled = currentPage === 1;
+        prevBtn.onclick = () => { currentPage--; renderTable(); };
+        pagination.appendChild(prevBtn);
+
+        for (let i = 1; i <= totalPages; i++) {
+            const btn = document.createElement("button");
+            btn.textContent = i;
+            btn.classList.toggle("active", i === currentPage);
+            btn.onclick = () => { currentPage = i; renderTable(); };
+            pagination.appendChild(btn);
+        }
+
+        const nextBtn = document.createElement("button");
+        nextBtn.textContent = "Next";
+        nextBtn.disabled = currentPage === totalPages;
+        nextBtn.onclick = () => { currentPage++; renderTable(); };
+        pagination.appendChild(nextBtn);
+    }
+
+    searchInput.addEventListener("input", () => {
+        currentPage = 1;
+        renderTable();
+    });
+
+    categoryFilter.addEventListener("change", () => {
+        currentPage = 1;
+        renderTable();
+    });
+
+    renderTable();
+</script>
 
 </body>
 </html>
